Issue #13 Add QUnit support
Refactor setup code to support QUnit.

Add first unit tests; now tests snapshot functionality (minimally).

Fix issues discovered by tests, especially widget context variables.
More work fixing these widget globals needs to be done to cover them
all.

--- a/macroTable.css
+++ b/macroTable.css
@@ -312,7 +312,7 @@ button:hover .icon--delete::after {
 
 .macro-table-column-moving .macro-table-reorder-guide,
 .macro-table-column-moving .macro-table-resize-guide {
-  pointer-events: none; /* this rule is what allows the reordering to work, making mouse events pass through. not supported in ie! */
+  /*pointer-events: none; /* this rule is what allows the reordering to work, making mouse events pass through. not supported in ie! */
 }
 
 .macro-table.macro-table-column-moving {
